demo 065 :: deferred shading development begin

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -55,6 +55,7 @@ add_subdirectory (055_FFT16)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
 add_subdirectory (062_GLSL_Noise_2)
+add_subdirectory (065_Deferred_Shading) 
 add_subdirectory (066_Marching_Cubes_CS) 
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
@@ -78,23 +79,17 @@ ENDIF()
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 # old stuff slowly moving up
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-#add_subdirectory (004_GL_POINTS_Attractor)
-#add_subdirectory (005_GL_GEOMETRY_SHADER)
-#add_subdirectory (006_Texturing)
 #add_subdirectory (009_Instanced_Draw)
 #add_subdirectory (010_Spherical_Triangles)
 #add_subdirectory (011_Quad_Tesselation)
-#add_subdirectory (013_Procedural_Bump_Mapping)
 #add_subdirectory (020_Hyperbolic_Space)
 #add_subdirectory (021_Rendering_to_Texture)
 #add_subdirectory (029_Black_Holes)
-#add_subdirectory (030_Plane_Shadows)
 #add_subdirectory (035_Environment_Map_GL_TEXTURE_CUBE_MAP)
 #add_subdirectory (037_GL_TEXTURE_3D)
 #add_subdirectory (038_Transform_Feedback)
 #add_subdirectory (039_Cubemap_Shadows)
 #add_subdirectory (043_DDS_Texture_Loader)
 #add_subdirectory (044_OBJ_Transform)
-#add_subdirectory (098_Working_Dir)
 
                                
