Some fixes + new demo idea = to use compute shader for SSAO + demo 029 refactor

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -42,7 +42,7 @@ add_subdirectory (041_OBJ_Loader)
 add_subdirectory (042_VAO_Loader)
 add_subdirectory (043_Strip_Visualizer)
 add_subdirectory (044_Ambient_Occlusion)
-add_subdirectory (045_Pure_Ambient_Occlusion)
+add_subdirectory (045_Compute_Shader_SSAO)
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
 add_subdirectory (049_ImGui)
