--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -41,7 +41,7 @@ add_subdirectory (040_Order_Independent_Transparency)
 add_subdirectory (041_OBJ_Loader)
 add_subdirectory (042_VAO_Loader)
 add_subdirectory (043_Strip_Visualizer)
-add_subdirectory (044_Ambient_Occlusion)
+add_subdirectory (044_Vertex_Fragment_AO)
 add_subdirectory (045_Compute_Shader_SSAO)
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
