--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory (052_Ocean)
 add_subdirectory (053_FFT4)
 add_subdirectory (054_FFT8)
 add_subdirectory (055_FFT16)
+add_subdirectory (056_Raymarch_CS)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
 add_subdirectory (062_GLSL_Noise_2)
