- demo 059 :: Physics-Based rendering began - demo 057 :: Fast compute shader raymarching began - stb_image integrated into project to load HDR images

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -53,6 +53,8 @@ add_subdirectory (053_FFT4)
 add_subdirectory (054_FFT8)
 add_subdirectory (055_FFT16)
 add_subdirectory (056_Raymarch_CS)
+add_subdirectory (057_Raymarch_CS_Fast)
+add_subdirectory (059_PBR)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
 add_subdirectory (062_GLSL_Noise_2)
