--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -64,6 +64,7 @@ add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (075_Toral_Cave_Post_Processing) 
 add_subdirectory (080_Shader_Toy)
+add_subdirectory (081_Conformal_Map)
 add_subdirectory (090_Stripifier)
 add_subdirectory (091_SGI_Stripifier)
 add_subdirectory (092_Tri_Stripper)
