old demo 048 :: Hyperbolic space recovered, but does not work yet

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -45,6 +45,7 @@ add_subdirectory (044_Vertex_Fragment_AO)
 add_subdirectory (045_Compute_Shader_SSAO)
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
+add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_ImGui)
 add_subdirectory (050_Ray_Marching)
 add_subdirectory (051_Ray_March_Textures)
