demo 056 and 057 :: compute shader works, but it is not faster

--- a/demos/056_Raymarch_CS/CMakeLists.txt
+++ b/demos/056_Raymarch_CS/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable (gl056 raymarch.cpp)
 
 add_custom_command(TARGET gl056 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
-target_link_libraries(gl056 LINK_PUBLIC framework)
+target_link_libraries(gl056 LINK_PUBLIC framework imgui)
