Vulkan first try.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,3 +78,8 @@ include_directories(framework)
 # opengl demos based on the framework
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 add_subdirectory (demos)
+
+#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+# vulkan demos
+#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+add_subdirectory (vulkan)
