demos 002, 003 work. 004 is in process

--- a/vulkan/CMakeLists.txt
+++ b/vulkan/CMakeLists.txt
@@ -8,5 +8,7 @@ include_directories("${VULKAN_SDK}/include")
 link_directories("${VULKAN_SDK}/lib") 
 link_directories("${VULKAN_SDK}/etc/explicit_layer.d")
 
-add_subdirectory (001_Vulkan_Instance)
+add_subdirectory (001_First_Triangle)
 add_subdirectory (002_VAO)
+add_subdirectory (003_UBO)
+add_subdirectory (004_RayMarch)
