--- a/vulkan/CMakeLists.txt
+++ b/vulkan/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory (002_VAO)
 add_subdirectory (003_UBO)
 add_subdirectory (004_Textures)
 add_subdirectory (005_RayMarch)
+add_subdirectory (006_Depth_Attachment)
