Vulkan ImGui example works

--- a/vulkan/CMakeLists.txt
+++ b/vulkan/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Add vulkan dependencies using enviornment variable from LunarG SDK Setup
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-set(VULKAN_SDK "/home/shared_pc/projects/VulkanSDK/1.0.46.0/x86_64")
+set(VULKAN_SDK "/home/afoksha/projects/VulkanSDK/1.0.46.0/x86_64")
 
 include_directories("${VULKAN_SDK}/include")
 link_directories("${VULKAN_SDK}/lib") 
@@ -14,3 +14,4 @@ add_subdirectory (003_UBO)
 add_subdirectory (004_Textures)
 add_subdirectory (005_RayMarch)
 add_subdirectory (006_Depth_Attachment)
+add_subdirectory (007_ImGui)
