Recovering old demo 063 :: shadow cubemap

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -59,6 +59,7 @@ add_subdirectory (059_PBR)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
 add_subdirectory (062_GLSL_Noise_2)
+add_subdirectory (063_Cubemap_Shadows)
 add_subdirectory (065_Deferred_Shading) 
 add_subdirectory (066_Marching_Cubes_CS) 
 add_subdirectory (070_Convex_Hull)
