--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -63,6 +63,7 @@ add_subdirectory (063_Cubemap_Shadows)
 add_subdirectory (064_Cubemap_Array_Shadows)
 add_subdirectory (065_Deferred_Shading) 
 add_subdirectory (066_Marching_Cubes_CS) 
+add_subdirectory (067_HBAO) 
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (075_Toral_Cave_Post_Processing) 
