demo 067 :: further refactor and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,4 +82,4 @@ add_subdirectory (demos)
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 # vulkan demos
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-add_subdirectory (vulkan)
+#add_subdirectory (vulkan)
