--- a/demos/067_HBAO/CMakeLists.txt
+++ b/demos/067_HBAO/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (gl067 main.cpp geometry.cpp fbo2d.cpp mtl.cpp obj1.cpp shader1.cpp surface1.cpp)
+add_executable (gl067 main.cpp geometry.cpp fbo2d.cpp mtl.cpp obj1.cpp surface1.cpp)
 
 add_custom_command(TARGET gl067 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
