--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -42,7 +42,7 @@ add_subdirectory (041_OBJ_Loader)
 add_subdirectory (042_VAO_Loader)
 add_subdirectory (043_Strip_Visualizer)
 add_subdirectory (044_Vertex_Fragment_AO)
-add_subdirectory (045_Compute_Shader_SSAO)
+#add_subdirectory (045_Compute_Shader_SSAO)
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
 add_subdirectory (048_Hyperbolic_Space)
@@ -64,6 +64,7 @@ add_subdirectory (064_Cubemap_Array_Shadows)
 add_subdirectory (065_Deferred_Shading) 
 add_subdirectory (066_Marching_Cubes_CS) 
 add_subdirectory (067_HBAO) 
+add_subdirectory (068_AO) 
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (075_Toral_Cave_Post_Processing) 
