Refactored and fixed imgui integration and added UI to demo 068_AO_WS

--- a/demos/068_AO_WS/CMakeLists.txt
+++ b/demos/068_AO_WS/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable (ao_ws ao.cpp)
 add_custom_command(TARGET ao_ws POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
-target_link_libraries(ao_ws LINK_PUBLIC framework)
+target_link_libraries(ao_ws LINK_PUBLIC framework imgui)
