--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -66,7 +66,8 @@ add_subdirectory (066_Marching_Cubes_CS)
 add_subdirectory (067_HBAO) 
 add_subdirectory (068_AO_CS)
 add_subdirectory (068_AO_WS)
-add_subdirectory (069_AO_Depth_Tex)  
+add_subdirectory (069_AO_Depth_Tex)
+add_subdirectory (069_AO_Depth_Tex_Compute_Shader)
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (075_Toral_Cave_Post_Processing) 
