2x2, 3x3, 4x4 AO compute shaders written. They are slow.

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -65,6 +65,9 @@ add_subdirectory (066_Marching_Cubes_CS)
 add_subdirectory (067_HBAO) 
 add_subdirectory (068_AO_CS)
 add_subdirectory (068_AO_WS)
+add_subdirectory (069_AO_Compute_Shader_CS)
+add_subdirectory (069_AO_Compute_Shader_WS)
+add_subdirectory (069_AO_CS_WS_4x4)   
 add_subdirectory (069_AO_Depth_Tex)
 add_subdirectory (069_AO_Depth_Tex_Compute_Shader)
 add_subdirectory (070_Convex_Hull)
