demo 069 :: serious enhancement

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -70,6 +70,7 @@ add_subdirectory (069_AO_Compute_Shader_WS)
 add_subdirectory (069_AO_CS_WS_4x4)   
 add_subdirectory (069_AO_Depth_Tex)
 add_subdirectory (069_AO_Depth_Tex_Compute_Shader)
+add_subdirectory (069_AO_Depth_Tex_Compute_Shader_Blit)
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (075_Toral_Cave_Post_Processing) 
