--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -78,6 +78,7 @@ add_subdirectory (075_Toral_Cave_Post_Processing)
 add_subdirectory (076_GL_TRANSFORM_FEEDBACK)  
 add_subdirectory (080_Shader_Toy)
 add_subdirectory (081_Conformal_Map)
+add_subdirectory (082_Marching_Cubes)
 add_subdirectory (090_Stripifier)
 add_subdirectory (091_SGI_Stripifier)
 add_subdirectory (092_Tri_Stripper)
