--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -81,6 +81,7 @@ add_subdirectory (081_Conformal_Map)
 add_subdirectory (082_Marching_Cubes)
 add_subdirectory (083_CMS)
 add_subdirectory (084_Gradient_Flow)
+add_subdirectory (085_CS_Bitonic_Sort) 
 add_subdirectory (090_Stripifier)               
 add_subdirectory (091_SGI_Stripifier)
 add_subdirectory (092_Tri_Stripper)
