Renamed 051 + minor enhancements

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -47,7 +47,7 @@ add_subdirectory (047_RayTracer)
 add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_ImGui)
 add_subdirectory (050_Ray_Marching)
-add_subdirectory (051_Ray_March_Textures)
+add_subdirectory (051_Volume_March_Crystal)
 add_subdirectory (052_Ocean)
 add_subdirectory (053_FFT4)
 add_subdirectory (054_FFT8)
