--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory (047_RayTracer)
 add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_ImGui)
 add_subdirectory (050_Ray_Marching)
+add_subdirectory (051_Volume_March)
 add_subdirectory (051_Volume_March_Crystal)
 add_subdirectory (052_Ocean)
 add_subdirectory (053_FFT4)
