--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -42,6 +42,7 @@ add_subdirectory (041_OBJ_Loader)
 add_subdirectory (042_VAO_Loader)
 add_subdirectory (043_Strip_Visualizer)
 add_subdirectory (044_Vertex_Fragment_AO)
+add_subdirectory (045_Mesh_Shells) 
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
 add_subdirectory (048_Hyperbolic_Space)
