--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory (056_Raymarch_CS)
 add_subdirectory (057_Raymarch_CS_Fast)
 add_subdirectory (058_SDF_Texture3D)
 add_subdirectory (058_SDF_March)
+add_subdirectory (058_SDF_Simple_March)
 add_subdirectory (059_PBR)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
