--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -56,6 +56,7 @@ add_subdirectory (054_FFT8)
 add_subdirectory (055_FFT16)
 add_subdirectory (056_Raymarch_CS)
 add_subdirectory (057_Raymarch_CS_Fast)
+add_subdirectory (058_SDF_Gen2)
 add_subdirectory (058_SDF_Texture3D)
 add_subdirectory (058_SDF_March)
 add_subdirectory (058_SDF_Simple_March)
