--- a/demos/058_SDF_Gen2/CMakeLists.txt
+++ b/demos/058_SDF_Gen2/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (sdf2 main.cpp makelevelset3.cpp)
+add_executable (sdf2 main.cpp)
 
 add_custom_command(TARGET sdf2 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
