--- a/vulkan/CMakeLists.txt
+++ b/vulkan/CMakeLists.txt
@@ -1,12 +1,7 @@
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-# Add vulkan dependencies using enviornment variable from LunarG SDK Setup
+# Vulkan demos
+# dependency :: LunarG SDK
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-set(VULKAN_SDK "/home/alexander/projects/VulkanSDK/1.0.46.0/x86_64")
-
-include_directories("${VULKAN_SDK}/include")
-link_directories("${VULKAN_SDK}/lib") 
-link_directories("${VULKAN_SDK}/etc/explicit_layer.d")
 
 add_subdirectory (001_First_Triangle)
 add_subdirectory (002_VAO)
