--- a/demos_vr/CMakeLists.txt
+++ b/demos_vr/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory (004_Plato_Solids)
 add_subdirectory (005_Rift_Attractor)
 add_subdirectory (006_Rendering_Order)
 add_subdirectory (007_Ray_Marching)
+add_subdirectory (008_Geometry_Shader)
