--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -80,6 +80,7 @@ add_subdirectory (069_AO_Depth_Tex_Compute_Shader_Blit)
 add_subdirectory (070_Convex_Hull)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (073_Iterative_Deformations)
+add_subdirectory (074_Grass)
 add_subdirectory (075_Toral_Cave_Post_Processing)
 add_subdirectory (076_GL_TRANSFORM_FEEDBACK)  
 add_subdirectory (080_Shader_Toy)
