--- a/demos_vr/004_Plato_Solids/CMakeLists.txt
+++ b/demos_vr/004_Plato_Solids/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable (oculus004 main.cpp)
 
 add_custom_command(TARGET oculus004 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
-target_link_libraries(oculus004 LINK_PUBLIC framework ${GLFW_STATIC_LIBRARIES} ${GLEW_STATIC_LIBRARIES} LibOVR)
+target_link_libraries(oculus004 LINK_PUBLIC ovr framework ${GLFW_STATIC_LIBRARIES} ${GLEW_STATIC_LIBRARIES})
