--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -21,6 +21,13 @@ add_library (image STATIC image/stb_image.cpp)
 target_link_libraries(image framework)
 
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+# oculus static library
+#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+add_library (ovr STATIC ovr/ovr_hmd.cpp)
+target_include_directories (ovr PUBLIC ${PROJECT_SOURCE_DIR}/OculusVR/LibOVR/Include)
+target_link_libraries(ovr framework LibOVR)
+
+#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 # imgui static library
 #------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 add_library (imgui STATIC imgui/imgui.cpp imgui/imgui_demo.cpp imgui/imgui_draw.cpp)
