grass looks much more convincing

--- a/demos_vr/CMakeLists.txt
+++ b/demos_vr/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory (001_Octulus_Initialization)
+add_subdirectory (001_Oculus_Initialization)
 add_subdirectory (002_Tracker)
 add_subdirectory (003_Room)
 add_subdirectory (004_Plato_Solids)
@@ -6,4 +6,4 @@ add_subdirectory (005_Rift_Attractor)
 add_subdirectory (006_Rendering_Order)
 add_subdirectory (007_Ray_Marching)
 add_subdirectory (008_Geometry_Shader)
-add_subdirectory (009_Ray_Marching_Depth)
+add_subdirectory (009_Grass)
