--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -46,7 +46,7 @@ add_subdirectory (045_Edge_Flipper)
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
 add_subdirectory (048_Hyperbolic_Space)
-add_subdirectory (049_ImGui)
+add_subdirectory (049_RayMarch_FS)
 add_subdirectory (050_Ray_Marching)
 add_subdirectory (051_Volume_March)
 add_subdirectory (051_Volume_March_Crystal)
