--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory (001_Empty_OpenGL_window)
 add_subdirectory (002_GL_POINTS)
 add_subdirectory (003_GL_LINE_LOOP)
 add_subdirectory (004_Texturing)
+add_subdirectory (005_Samplers)
 add_subdirectory (005_Texture_Filtering)
 add_subdirectory (006_Heightmap_Bump)
 add_subdirectory (007_Transform_Feedback)
