--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -55,6 +55,7 @@ add_subdirectory (053_FFT4)
 add_subdirectory (054_FFT8)
 add_subdirectory (055_FFT16)
 add_subdirectory (056_Raymarch_CS)
+add_subdirectory (056_Raymarch_CS_AA)
 add_subdirectory (057_Raymarch_CS_Fast)
 add_subdirectory (058_SDF_Gen2)
 add_subdirectory (058_SDF_Texture3D)
