--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory (003_GL_LINE_LOOP)
 add_subdirectory (004_Texturing)
 add_subdirectory (005_Filtering_And_Samplers)
 add_subdirectory (006_Heightmap_Bump)
+add_subdirectory (006_Displacement_Maps)
 add_subdirectory (007_Transform_Feedback)
 add_subdirectory (008_Geometry_Shader)
 add_subdirectory (009_Stencil_Shadows_GL_TRIANGLES_ADJACENCY) 
