--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory (030_Plane_Shadows)
 add_subdirectory (031_Using_GL_STENCIL_BUFFER)
 add_subdirectory (032_Image_Filter)
 add_subdirectory (032_Bump_Generator)
+add_subdirectory (032_NormalMap)
 add_subdirectory (033_Fur_using_GL_GEOMETRY_SHADER)
 add_subdirectory (034_Multiple_Viewports)
 add_subdirectory (035_Vertex_Ambient_Occlusion)
