Parallax Mapping demo 2

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory (032_Bump_Generator)
 add_subdirectory (032_NormalMap)
 add_subdirectory (032_NormalMap_Mipmap)
 add_subdirectory (032_Parallax_Map)
+add_subdirectory (032_Parallax_Map_Advanced)
 add_subdirectory (033_Fur_using_GL_GEOMETRY_SHADER)
 add_subdirectory (034_Multiple_Viewports)
 add_subdirectory (035_Vertex_Ambient_Occlusion)
