Parallax Mapping demo 2

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -51,6 +51,8 @@ add_subdirectory (044_Vertex_Fragment_AO)
 add_subdirectory (045_Edge_Flipper) 
 add_subdirectory (046_Fractal_Surface)
 add_subdirectory (047_RayTracer)
+add_subdirectory (047_RayTrace2)
+add_subdirectory (047_RayTrace3)
 add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_RayMarch_FS)
 add_subdirectory (050_Ray_Marching)
