--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -55,6 +55,7 @@ add_subdirectory (047_RayTrace2)
 add_subdirectory (047_RayTrace3)
 add_subdirectory (047_RayTrace4)
 add_subdirectory (047_RayTrace5)
+add_subdirectory (047_RayTrace6)
 add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_RayMarch_FS)
 add_subdirectory (050_Ray_Marching)
