--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -50,7 +50,8 @@ add_subdirectory (043_Strip_Visualizer)
 add_subdirectory (044_Vertex_Fragment_AO)
 add_subdirectory (045_Edge_Flipper) 
 add_subdirectory (046_Fractal_Surface)
-add_subdirectory (047_RayTracer)
+add_subdirectory (047_RayTrace0)
+add_subdirectory (047_RayTrace1)
 add_subdirectory (047_RayTrace2)
 add_subdirectory (047_RayTrace3)
 add_subdirectory (047_RayTrace4)
