cubemap projection matrices fix

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -75,6 +75,7 @@ add_subdirectory (058_SDF_Texture3D)
 add_subdirectory (058_SDF_March)
 add_subdirectory (058_SDF_Simple_March)
 add_subdirectory (059_PBR)
+add_subdirectory (059_PBR_2)
 add_subdirectory (060_GLSL_Noise)
 add_subdirectory (061_Noise_Derivative)
 add_subdirectory (062_GLSL_Noise_2)
