--- a/demos/059_PBR_2/CMakeLists.txt
+++ b/demos/059_PBR_2/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable (pbr Animator.cpp Axis.cpp Camera.cpp Drawable.cpp Earth.cpp Light.cpp LinesGeometry.cpp LinesMaterial.cpp main.cpp Material.cpp 
-                      Mesh.cpp Moon.cpp PhongMaterial.cpp Scene.cpp Shader.cpp Sphere.cpp SphereAnimator.cpp SphereMesh.cpp Timer.cpp)
+add_executable (pbr main.cpp animator.cpp axis.cpp camera.cpp drawable.cpp earth.cpp light.cpp linesgeometry.cpp linesmaterial.cpp material.cpp 
+                    mesh.cpp moon.cpp phongmaterial.cpp scene.cpp shader.cpp sphere.cpp sphereanimator.cpp spheremesh.cpp timer.cpp)
 
 add_custom_command(TARGET pbr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data)
 add_custom_command(TARGET pbr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/shaders ${CMAKE_CURRENT_BINARY_DIR}/shaders)
