--- a/demos/059_Voxel_PBR/CMakeLists.txt
+++ b/demos/059_Voxel_PBR/CMakeLists.txt
@@ -1,13 +1,8 @@
 add_executable (voxel_pbr main.cpp
                           behaviors/free_camera.cpp 
                           core/assets_manager.cpp core/behavior.cpp core/engine_base.cpp core/interface.cpp
-                          interfaces/framebuffer_textures.cpp interfaces/framerate.cpp interfaces/global_illumination_options.cpp 
-                          interfaces/main_menu.cpp interfaces/scene_cameras.cpp interfaces/scene_lights.cpp interfaces/scene_loader.cpp
-                          interfaces/scene_materials.cpp interfaces/shadowing_options.cpp interfaces/shape_creator.cpp interfaces/voxelization_options.cpp 
-                          primitives/fullscreen_quad.cpp primitives/shapes.cpp 
-                          programs/blur_program.cpp programs/clear_dynamic_program.cpp programs/depth_program.cpp programs/geometry_program.cpp 
-                          programs/lighting_program.cpp programs/mipmapping_program.cpp programs/propagation_program.cpp programs/radiance_program.cpp 
-                          programs/voxel_drawer_program.cpp programs/voxelization_program.cpp 
+                          interfaces/main_menu.cpp
+                          primitives/fullscreen_quad.cpp primitives/shapes.cpp
                           renderers/gi_deferred_renderer.cpp renderers/shadow_map_renderer.cpp renderers/voxelizer_renderer.cpp 
                           rendering/interface_renderer.cpp rendering/render_window.cpp 
                           scene/camera.cpp scene/light.cpp scene/material.cpp scene/mesh.cpp scene/node.cpp scene/scene.cpp scene/texture.cpp 
