--- a/demos/059_Voxel_PBR/CMakeLists.txt
+++ b/demos/059_Voxel_PBR/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable (voxel_pbr main.cpp
                           renderers/gi_deferred_renderer.cpp renderers/shadow_map_renderer.cpp renderers/voxelizer_renderer.cpp 
                           rendering/interface_renderer.cpp rendering/render_window.cpp 
                           scene/camera.cpp scene/light.cpp scene/material.cpp scene/mesh.cpp scene/node.cpp scene/scene.cpp scene/texture.cpp 
-                          types/base_object.cpp types/bounding_box.cpp types/frustum.cpp types/program_shader.cpp types/transform.cpp types/vertex.cpp 
+                          types/bounding_box.cpp types/frustum.cpp types/program_shader.cpp types/transform.cpp types/vertex.cpp 
                           util/const_definitions.cpp util/metrics_report.cpp util/raw_format.cpp util/scene_importer.cpp util/texture_importer.cpp)
 
 add_custom_command(TARGET voxel_pbr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets)
