Refactor going on

--- a/demos/059_Voxel_PBR/CMakeLists.txt
+++ b/demos/059_Voxel_PBR/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_executable (voxel_pbr main.cpp
                           behaviors/free_camera.cpp 
-                          core/assets_manager.cpp core/behavior.cpp core/engine_base.cpp
+                          core/assets_manager.cpp core/engine_base.cpp
                           interfaces/main_menu.cpp
                           primitives/fullscreen_quad.cpp primitives/shapes.cpp
                           renderers/gi_deferred_renderer.cpp renderers/shadow_map_renderer.cpp renderers/voxelizer_renderer.cpp 
                           rendering/interface_renderer.cpp rendering/render_window.cpp 
-                          scene/scene.cpp scene/texture.cpp 
+                          scene/scene.cpp
                           types/frustum.cpp types/transform.cpp
                           util/metrics_report.cpp util/raw_format.cpp util/scene_importer.cpp)
 
