Refactor going on

--- a/demos/059_Voxel_PBR/CMakeLists.txt
+++ b/demos/059_Voxel_PBR/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_executable (voxel_pbr main.cpp
                           behaviors/free_camera.cpp 
-                          core/assets_manager.cpp core/engine_base.cpp
-                          interfaces/main_menu.cpp
+                          core/assets_manager.cpp core/engine.cpp
+                          interfaces/main_ui.cpp
                           primitives/fullscreen_quad.cpp primitives/shapes.cpp
                           renderers/gi_deferred_renderer.cpp renderers/shadow_map_renderer.cpp renderers/voxelizer_renderer.cpp 
-                          rendering/interface_renderer.cpp rendering/render_window.cpp 
+                          rendering/ui_renderer.cpp rendering/render_window.cpp 
                           scene/scene.cpp
-                          types/frustum.cpp types/transform.cpp
-                          util/metrics_report.cpp util/raw_format.cpp util/scene_importer.cpp)
+                          types/transform.cpp
+                          util/raw_format.cpp util/scene_importer.cpp)
 
 add_custom_command(TARGET voxel_pbr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets)
 add_custom_command(TARGET voxel_pbr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/fonts ${CMAKE_CURRENT_BINARY_DIR}/fonts)
