--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -94,6 +94,7 @@ add_subdirectory (069_AO_Depth_Tex)
 add_subdirectory (069_AO_Depth_Tex_Compute_Shader)
 add_subdirectory (069_AO_Depth_Tex_Compute_Shader_Blit)
 add_subdirectory (070_Convex_Hull)
+add_subdirectory (070_Convex_Hull_Multiple_Solids)
 add_subdirectory (071_Cache_Optimizer)
 add_subdirectory (073_Iterative_Deformations)
 add_subdirectory (074_Grass)
