--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory (047_RayTrace4)
 add_subdirectory (047_RayTrace5)
 add_subdirectory (047_RayTrace6)
 add_subdirectory (047_RayTrace7)
+add_subdirectory (047_RayTrace_Cubemap)
 add_subdirectory (048_Hyperbolic_Space)
 add_subdirectory (049_RayMarch_FS)
 add_subdirectory (050_Ray_Marching)
