--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -102,6 +102,7 @@ add_subdirectory (074_Grass)
 add_subdirectory (075_Toral_Cave_Post_Processing)
 add_subdirectory (076_GL_TRANSFORM_FEEDBACK)
 add_subdirectory (077_Subsurface_Scattering_Depth_Buffer)
+add_subdirectory (079_Volumetric_Light)
 add_subdirectory (080_Shader_Toy)
 add_subdirectory (081_Conformal_Map)
 add_subdirectory (082_Marching_Cubes)
