--- a/vulkan/006_Depth_Attachment/CMakeLists.txt
+++ b/vulkan/006_Depth_Attachment/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable (vulkan006 main.cpp)
 add_custom_command(TARGET vulkan006 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
-target_link_libraries(vulkan006 LINK_PUBLIC framework vulkan-1)
+target_link_libraries(vulkan006 LINK_PUBLIC framework ${VULKAN_DYNAMIC_LIBRARY})
