Billiards raytrace continue + some refactor

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -111,6 +111,7 @@ add_subdirectory (084_Gradient_Flow)
 add_subdirectory (085_CS_Bitonic_Sort)
 add_subdirectory (086_RayTrace)
 add_subdirectory (087_Halo)
+add_subdirectory (088_Motion_Blur)
 add_subdirectory (090_Stripifier)
 add_subdirectory (091_SGI_Stripifier)
 add_subdirectory (092_Tri_Stripper)
