--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -75,7 +75,8 @@ add_subdirectory (058_SDF_Gen2)
 add_subdirectory (058_SDF_Texture3D)
 add_subdirectory (058_SDF_March)
 add_subdirectory (058_SDF_Simple_March)
-add_subdirectory (059_PBR)
+add_subdirectory (059_PBR_0)
+add_subdirectory (059_PBR_1)
 add_subdirectory (059_PBR_2)
 add_subdirectory (059_Voxel_PBR)
 add_subdirectory (060_GLSL_Noise)
