Fixed 088. Compiles, run, and even shows something, but not what we want

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -75,6 +75,7 @@ add_subdirectory (058_SDF_Gen2)
 add_subdirectory (058_SDF_Texture3D)
 add_subdirectory (058_SDF_March)
 add_subdirectory (058_SDF_Simple_March)
+add_subdirectory (059_Irradiance_Computation)
 add_subdirectory (059_PBR_0)
 add_subdirectory (059_PBR_1)
 add_subdirectory (059_PBR_2)
