--- a/demos/059_Irradiance_Computation/CMakeLists.txt
+++ b/demos/059_Irradiance_Computation/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (irr irr.cpp)
+add_executable (irr irr.cpp default_image.cpp spherical_harmonics.cpp)
 add_custom_command(TARGET irr POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/glsl ${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
 target_link_libraries(irr LINK_PUBLIC framework)
